--- a/.github/workflows/syntax-and-unit-tests.yml
+++ b/.github/workflows/syntax-and-unit-tests.yml
@@ -7,20 +7,27 @@ jobs:
 
     runs-on: ubuntu-18.04
 
+    strategy:
+      matrix:
+        python-version: ['3.6', '3.7', '3.8', '3.x']
+    
+    name: Python ${{ matrix.python-version }} Tests
+
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Setup python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
+        architecture: x64
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-local.txt
         pip install -r requirements.txt
+        pip install -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         flake8 --ignore=F401 --exclude=$(grep -v '^#' .gitignore | xargs | sed -e 's/ /,/g')
-    - name: Test with pytest
+    - name: Unit Test with pytest
       run: |
-        pytest
+        PYTHONPATH=. pytest
