--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
+# prequired for the API itself
+fastapi>=0.42.0,<1
+uvicorn>=0.10.8,<1
+gunicorn>=20.1.0
+# other packages specific to the API
 numpy>=1.17.4
