--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ uvicorn>=0.10.8,<1
 gunicorn>=20.1.0
 # other packages specific to the API
 numpy>=1.17.4
-sentence-transformers<5.0.0
+sentence-transformers
 
